--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "@ngx-loading-bar/core": "^5.1.1",
+    "@ngx-loading-bar/http-client": "^5.1.1",
     "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
